src/components/Home.css
.home {
  padding: 0 2rem;
  max-height: 90vh;
  overflow-y: scroll;
}

.home-buttons {
  display: flex;
  flex-wrap: wrap;
  width: 50%;
  margin: auto;
  justify-content: space-evenly;
  gap: 1rem;
}

.home-buttons .button {
  margin: 0.5rem;
}

.home-content {
  display: flex;
  flex-direction: row;
  padding: 2rem;
  justify-content: space-evenly;
  height: max-content;
  max-height: 400px;
  overflow-y: scroll;
}

.home-media {
  display: flex;
  width: 300px;
  max-width: 300px;
  flex-direction: column;
  overflow-y: scroll;
  overflow-x: hidden;
  background-color: rgba(255, 255, 255, 0.275);
  padding: 1rem;
  border-radius: 10px;
  text-align: center;
}

.home-media img {
  margin: 1rem auto;
  max-width: 200px;
}

.home-media p {
  width: 75%;
  margin: auto;
}

#home-media-link {
  margin: 1rem;
}

@media only screen and (max-width: 975px) {
  .home-content {
    flex-direction: column;
    gap: 2rem;
  }
  .home {
    max-height: 100%;
    overflow-y: scroll;
  }
  .home-media {
    max-height: none;
    max-width: none;
    width: inherit;
  }
  .home-content {
    max-height: none;
  }
}

